# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.115 2008-04-14 12:52:55 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.2.7 (2008/??/??)
 - (2008/04/14) Fixed bug# 2860 - ColumnAdd doesn't work on a DB2 database if
    Required is true.
 - (2008/04/10) Added new estonian translation, thanks to Lauri Jesmin!
 - (2008/04/07) Fixed bug# 2814 - BCC emails are visible to all receipiants in
    email header.
 - (2008/04/07) Fixed bug# 2829 - Local system email address is always set to CC
    option in compose email answer screen.
 - (2008/04/07) Fixed bug# 2833 - Broken email attachments if only attachment is
    in email (no mime attachments).
 - (2008/04/03) Fixed bug# 2828 - Strings like ftp.invalid.org are shown as http
    link in TicketZoom.
 - (2008/04/02) Fixed bug# 2756 - "http." in article body is displayed as
    "http://http.".
 - (2008/04/01) Fixed bug# 2822 - Ticket Number in subject of Bounce Notification
    to customer/sender is not shown.
 - (2008/04/01) Fixed bug# 2453 - syntax errors on customer search; name@host
    problems the mail address parser does not recognize the email address if it
    is not fully 2822 compilant.

2.2.6 (2008/03/31)
 - (2008/03/25) Fixed bug# 2732 - Service name is truncated in dropdown lists
 - (2008/03/21) Fixed bug# 2758 - non-latin filenames in emails get not converted
    to utf8 (e. g. koi8-r, utf8, cp1251).
 - (2008/03/21) Fixed bug# 2781 - Typo in Kernel::System::Ticket::MoveTicket()
   "&" instead of "&&".
 - (2008/03/20) Fixed bug# 2772 - Dangling links to deleted tickets (ticket
    links get not deleted after a ticket got deleted).
 - (2008/03/14) Fixed bug# 2770 - Internal cache mechanism of SLAs delivers
    wrong content.